2006-03-16  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c : Add support support for signals.
	  Change mini shell script so -S hack will work.

2006-03-15  Mark Grondona <mgrondona@llnl.gov>
	* src/pdsh/mod.c : Remove error message when loading duplicate
	  module in pdsh. This is OK since we removed code which
	  only loaded .la's, we could be loading corresponding .so
	  after the .la (or vice versa).

	* pdsh.spec : Remove unneeded .la and .a files in packages.

	* : tag pdsh-2.9

2006-03-15  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c : Use io session file instead of 
	stdout and stdin session files.  Enable pdcp support.

	* doc/pdsh.1.in, doc/pdcp.1.in : Describe xcpu module.

2006-03-14  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/mod.c : Remove code which only loaded pdsh modules via
	  *.la files. This probably doesn't save much time and didn't allow
	  us to only install .so's on some systems.

	* src/common/split.c : Include xmalloc.h for Strdup () prototype.

2006-03-14  Jim Garlick <garlick@llnl.gov>

	* src/modules/xcpucmd.c, config/ac_xcpu.m4 : New (experimental).

	* configure.ac, config/Makefile.am, src/modules/Makefile.am : 
	Add xcpu module support.

	* src/pdsh/rcmd.c : set precedence for xcpu module.

	* README.modules, NEWS : List xcpu module.

2006-02-24  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_debug.m4, configure : 
	  Do not strip executables on Mac OSX, this seems to remove all access 
	  to global dynamic symbols for loaded modules.

	* src/pdsh/Makefile.am, src/pdsh/Makefile.in : 
	  Do not install pdsh/pdcp setuid root by default anymore.

	* pdsh.spec : Apply Ben Woodard's <woodard@redhat.com> patches
	  for Fedora acceptance.

2006-02-14  Mark Grondona <mgrondona@llnl.gov>

	* : Update Copyright dates.

2006-02-13  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Modified to comply with rpmlint 
	  (Ben Woodard <woodard@redhat.com>).
